added notebook with data basic statistics

--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -3778,14 +3778,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def str_to_int(s: str):\n",
     "    if not pd.isnull(s):\n",
-    "        return int(float(str(s).replace(\",\", \"\")))\n",
-    "\n",
+    "        return int(float(str(s).replace(\",\", \"\")))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "merged_df[\"title_listeners\"] = merged_df[\"title_listeners\"].apply(str_to_int).astype(\"Int64\")\n",
     "merged_df[\"title_scrobbles\"] = merged_df[\"title_scrobbles\"].apply(str_to_int).astype(\"Int64\")\n",
     "merged_df[\"yt_views\"] = merged_df[\"yt_views\"].apply(str_to_int).astype(\"Int64\")\n",
@@ -3794,7 +3801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3805,8 +3812,15 @@
     "        return int(duration)\n",
     "    parts = duration.split(\":\")\n",
     "    if parts[0].isdigit() and parts[1].isdigit():\n",
-    "        return int(parts[0]) * 60 + int(parts[1])\n",
-    "\n",
+    "        return int(parts[0]) * 60 + int(parts[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "merged_df[\"title_duration\"] = merged_df[\"title_duration\"].apply(duration_to_int).astype(\"Int64\")\n",
     "merged_df[\"yt_duration\"] = merged_df[\"yt_duration\"].apply(duration_to_int).astype(\"Int64\")"
    ]
@@ -4505,6 +4519,592 @@
     "\n",
     "print(f\"Total number of songs: {len(relevant_df)}\\n\")\n",
     "print(f\"Number of songs per artist:\\n{songs_per_artist.describe()}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Artists df preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>artist</th>\n",
+       "      <th>artist_listeners</th>\n",
+       "      <th>artist_scrobbles</th>\n",
+       "      <th>artist_tags</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Океан Ельзи</td>\n",
+       "      <td>203,060</td>\n",
+       "      <td>13,552,898</td>\n",
+       "      <td>['rock', 'ukrainian', 'ukrainian rock', 'indie...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Go_A</td>\n",
+       "      <td>189,946</td>\n",
+       "      <td>4,088,960</td>\n",
+       "      <td>['ukrainian', 'folktronica', 'folk', 'electron...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Бумбокс</td>\n",
+       "      <td>174,374</td>\n",
+       "      <td>6,424,069</td>\n",
+       "      <td>['ukrainian', 'funk', 'reggae', 'hip-hop', 'fu...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Скрябін</td>\n",
+       "      <td>59,090</td>\n",
+       "      <td>2,821,158</td>\n",
+       "      <td>['ukrainian', 'synthpop', 'pop-rock', 'electro...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>KALUSH</td>\n",
+       "      <td>106,178</td>\n",
+       "      <td>1,850,491</td>\n",
+       "      <td>['ukrainian', 'rap', 'hip-hop', 'ukraine', 'eu...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>201</th>\n",
+       "      <td>Dens</td>\n",
+       "      <td>2,485</td>\n",
+       "      <td>66,284</td>\n",
+       "      <td>['post-hardcore', 'christian', 'melodic hardco...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>202</th>\n",
+       "      <td>TELLY GRAVE</td>\n",
+       "      <td>4,942</td>\n",
+       "      <td>66,814</td>\n",
+       "      <td>['rap', 'hip-hop', 'russian', 'ukraine', 'ukra...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>203</th>\n",
+       "      <td>NAZVA</td>\n",
+       "      <td>4,640</td>\n",
+       "      <td>60,064</td>\n",
+       "      <td>['ukrainian', 'folk', 'folk pop', 'pop', 'ukra...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>204</th>\n",
+       "      <td>Dazzle Dreams</td>\n",
+       "      <td>5,948</td>\n",
+       "      <td>109,380</td>\n",
+       "      <td>['ukrainian', 'electronic', 'electropop', 'amb...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>205</th>\n",
+       "      <td>Сергій Жадан Та Собаки В Космосі</td>\n",
+       "      <td>2,111</td>\n",
+       "      <td>90,877</td>\n",
+       "      <td>['ukrainian', 'punk', 'ska', 'poetry', 'rock',...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>206 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               artist artist_listeners artist_scrobbles  \\\n",
+       "0                         Океан Ельзи          203,060       13,552,898   \n",
+       "1                                Go_A          189,946        4,088,960   \n",
+       "2                             Бумбокс          174,374        6,424,069   \n",
+       "3                             Скрябін           59,090        2,821,158   \n",
+       "4                              KALUSH          106,178        1,850,491   \n",
+       "..                                ...              ...              ...   \n",
+       "201                              Dens            2,485           66,284   \n",
+       "202                       TELLY GRAVE            4,942           66,814   \n",
+       "203                             NAZVA            4,640           60,064   \n",
+       "204                     Dazzle Dreams            5,948          109,380   \n",
+       "205  Сергій Жадан Та Собаки В Космосі            2,111           90,877   \n",
+       "\n",
+       "                                           artist_tags  \n",
+       "0    ['rock', 'ukrainian', 'ukrainian rock', 'indie...  \n",
+       "1    ['ukrainian', 'folktronica', 'folk', 'electron...  \n",
+       "2    ['ukrainian', 'funk', 'reggae', 'hip-hop', 'fu...  \n",
+       "3    ['ukrainian', 'synthpop', 'pop-rock', 'electro...  \n",
+       "4    ['ukrainian', 'rap', 'hip-hop', 'ukraine', 'eu...  \n",
+       "..                                                 ...  \n",
+       "201  ['post-hardcore', 'christian', 'melodic hardco...  \n",
+       "202  ['rap', 'hip-hop', 'russian', 'ukraine', 'ukra...  \n",
+       "203  ['ukrainian', 'folk', 'folk pop', 'pop', 'ukra...  \n",
+       "204  ['ukrainian', 'electronic', 'electropop', 'amb...  \n",
+       "205  ['ukrainian', 'punk', 'ska', 'poetry', 'rock',...  \n",
+       "\n",
+       "[206 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "artists_df = pd.read_csv(os.path.join(\"data\", \"artists_v1.csv\"))\n",
+    "artists_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "artists_df[\"artist_listeners\"] = artists_df[\"artist_listeners\"].apply(str_to_int).astype(\"Int64\")\n",
+    "artists_df[\"artist_scrobbles\"] = artists_df[\"artist_scrobbles\"].apply(str_to_int).astype(\"Int64\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "artists_df[\"artist_tags\"] = artists_df[\"artist_tags\"].apply(eval)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of unique artists tags: 352\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_artist_tags = set()\n",
+    "\n",
+    "for tags in artists_df[\"artist_tags\"].values:\n",
+    "    unique_artist_tags = unique_artist_tags.union(set(tags))\n",
+    "\n",
+    "print(\"Number of unique artists tags:\", len(unique_artist_tags))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'00s',\n",
+       " '10s',\n",
+       " '2',\n",
+       " '2000s',\n",
+       " '2005',\n",
+       " '2009',\n",
+       " '2010s',\n",
+       " '2017 single',\n",
+       " '3',\n",
+       " '4',\n",
+       " '6 of 10 stars',\n",
+       " '90s',\n",
+       " 'a cappella',\n",
+       " 'abstract hip-hop',\n",
+       " 'acapella',\n",
+       " 'acid jazz',\n",
+       " 'acoustic',\n",
+       " 'agri-alco-rock',\n",
+       " 'all',\n",
+       " 'alt rock',\n",
+       " 'alternative',\n",
+       " 'alternative metal',\n",
+       " 'alternative rock',\n",
+       " 'ambient',\n",
+       " 'ambient music',\n",
+       " 'anime',\n",
+       " 'anthem',\n",
+       " 'argentina',\n",
+       " 'art pop',\n",
+       " 'art rock',\n",
+       " 'austria',\n",
+       " 'authentic',\n",
+       " 'avant-folk',\n",
+       " 'avant-garde',\n",
+       " 'babkin',\n",
+       " 'band',\n",
+       " 'bands',\n",
+       " 'baroque pop',\n",
+       " 'based',\n",
+       " 'bayracore',\n",
+       " 'beats',\n",
+       " 'beautiful',\n",
+       " 'bedroom pop',\n",
+       " 'belarus',\n",
+       " 'belarusian',\n",
+       " 'best of preselection',\n",
+       " 'blues',\n",
+       " 'bonzaiprogressive',\n",
+       " 'booba',\n",
+       " 'bosnian',\n",
+       " 'british',\n",
+       " 'britpop',\n",
+       " 'cabaret',\n",
+       " 'celebration',\n",
+       " 'chanson',\n",
+       " 'childrens music',\n",
+       " 'chillhop',\n",
+       " 'chillout',\n",
+       " 'chiptune',\n",
+       " 'christian',\n",
+       " 'christian hardcore',\n",
+       " 'christmas',\n",
+       " 'christmas music',\n",
+       " 'christmas songs',\n",
+       " 'classical',\n",
+       " 'cloud rap',\n",
+       " 'club',\n",
+       " 'codeinoslav',\n",
+       " 'comedy',\n",
+       " 'cover',\n",
+       " 'covers',\n",
+       " 'cringecore',\n",
+       " 'cute',\n",
+       " 'cyber-folk',\n",
+       " 'dance',\n",
+       " 'dance pop',\n",
+       " 'dance-punk',\n",
+       " 'dark folk',\n",
+       " 'dark trap',\n",
+       " 'darktrap',\n",
+       " 'debut album',\n",
+       " 'deep house',\n",
+       " 'deezer',\n",
+       " 'depressive rock',\n",
+       " 'disc weekly',\n",
+       " 'djent',\n",
+       " 'doom metal',\n",
+       " 'downtempo',\n",
+       " 'dream pop',\n",
+       " 'drift phonk',\n",
+       " 'drugs',\n",
+       " 'drum',\n",
+       " 'easy listening',\n",
+       " 'edm',\n",
+       " 'electro',\n",
+       " 'electronic',\n",
+       " 'electronic rock',\n",
+       " 'electronica',\n",
+       " 'electropo',\n",
+       " 'electropop',\n",
+       " 'emo',\n",
+       " 'emocore',\n",
+       " 'english',\n",
+       " 'english club',\n",
+       " 'esc',\n",
+       " 'esc national selection 2024',\n",
+       " 'estrada',\n",
+       " 'ethereal',\n",
+       " 'ethereal wave',\n",
+       " 'ethnic',\n",
+       " 'ethnic pop',\n",
+       " 'ethno-ska',\n",
+       " 'eurovision',\n",
+       " 'eurovision 2012',\n",
+       " 'eurovision 2020',\n",
+       " 'eurovision 2023',\n",
+       " 'eurovision song contest',\n",
+       " 'ex ussr star',\n",
+       " 'experimental',\n",
+       " 'experimental ukrainian hip-hop',\n",
+       " 'explicit lyrics',\n",
+       " 'fairy tale and fantasy vibes',\n",
+       " 'feel good',\n",
+       " 'female   voice',\n",
+       " 'female vocal',\n",
+       " 'female vocalist',\n",
+       " 'female vocalists',\n",
+       " 'feminine cavern of love',\n",
+       " 'finnish',\n",
+       " 'finnish punk',\n",
+       " 'folk',\n",
+       " 'folk metal',\n",
+       " 'folk pop',\n",
+       " 'folk punk',\n",
+       " 'folk rock',\n",
+       " 'folk-pop',\n",
+       " 'folk-punk',\n",
+       " 'folk-rock',\n",
+       " 'folktronica',\n",
+       " 'funk',\n",
+       " 'funky-groove',\n",
+       " 'future garage',\n",
+       " 'future pop',\n",
+       " 'gangster rap',\n",
+       " 'garage punk',\n",
+       " 'garage rock',\n",
+       " 'gop pop',\n",
+       " 'goth pop',\n",
+       " 'gothic',\n",
+       " 'gothic love metal',\n",
+       " 'gothic metal',\n",
+       " 'gothic rock',\n",
+       " 'grunge',\n",
+       " 'gypsy punk',\n",
+       " 'happy music',\n",
+       " 'hardcore',\n",
+       " 'hardcore punk',\n",
+       " 'heavy metal',\n",
+       " 'hip hop',\n",
+       " 'hip-hop',\n",
+       " 'historical',\n",
+       " 'house',\n",
+       " 'humor',\n",
+       " 'hymn',\n",
+       " 'hyperpop',\n",
+       " 'idm',\n",
+       " 'ilg',\n",
+       " 'indie',\n",
+       " 'indie folk',\n",
+       " 'indie pop',\n",
+       " 'indie rock',\n",
+       " 'indie-rock',\n",
+       " 'indietronica',\n",
+       " 'industrial',\n",
+       " 'instrumental',\n",
+       " 'instrumental hip-hop',\n",
+       " 'italo disco',\n",
+       " 'jamala',\n",
+       " 'japan',\n",
+       " 'japanese',\n",
+       " 'jazz',\n",
+       " 'kolhoz rnb',\n",
+       " 'liszaj radio',\n",
+       " 'lo-fi',\n",
+       " 'lofi',\n",
+       " 'lounge',\n",
+       " 'love metal',\n",
+       " 'lovely',\n",
+       " 'lutsk',\n",
+       " 'lviv',\n",
+       " 'male vocalists',\n",
+       " 'melancholic',\n",
+       " 'melancholic rock',\n",
+       " 'melodic hardcore',\n",
+       " 'metal',\n",
+       " 'minimal',\n",
+       " 'mint and mustard',\n",
+       " 'motivational music',\n",
+       " 'my top songs',\n",
+       " 'n-a',\n",
+       " 'neofolk',\n",
+       " 'new wave',\n",
+       " 'noise',\n",
+       " 'nu metal',\n",
+       " 'nu-metal',\n",
+       " 'odin v kanoe',\n",
+       " 'officially shit',\n",
+       " 'okean elzy',\n",
+       " 'opti-rock',\n",
+       " 'other',\n",
+       " 'parental advisory',\n",
+       " 'parody',\n",
+       " 'party',\n",
+       " 'pawe ponravilos',\n",
+       " 'phonk',\n",
+       " 'piano music',\n",
+       " 'playlista rmf fm',\n",
+       " 'please play this track',\n",
+       " 'po-russki',\n",
+       " 'poetry',\n",
+       " 'poland',\n",
+       " 'polish',\n",
+       " 'pop',\n",
+       " 'pop music',\n",
+       " 'pop punk',\n",
+       " 'pop rap',\n",
+       " 'pop rock',\n",
+       " 'pop-punk',\n",
+       " 'pop-rock',\n",
+       " 'poprock',\n",
+       " 'popsa',\n",
+       " 'pornhub',\n",
+       " 'positive',\n",
+       " 'post-grunge',\n",
+       " 'post-hardcore',\n",
+       " 'post-punk',\n",
+       " 'post-rock',\n",
+       " 'post-romantic',\n",
+       " 'power pop',\n",
+       " 'powerpop',\n",
+       " 'progressive metal',\n",
+       " 'progressive rock',\n",
+       " 'psychedelic',\n",
+       " 'psychedelic rock',\n",
+       " 'psytrance',\n",
+       " 'punk',\n",
+       " 'punk rock',\n",
+       " 'punk-rock',\n",
+       " 'rage',\n",
+       " 'rage trap',\n",
+       " 'ragecore',\n",
+       " 'rap',\n",
+       " 'rap rock',\n",
+       " 'rapcore',\n",
+       " 'reggae',\n",
+       " 'relaxing music',\n",
+       " 'rnb',\n",
+       " 'rock',\n",
+       " 'rock and roll',\n",
+       " 'rock music',\n",
+       " 'russia',\n",
+       " 'russian',\n",
+       " 'russian hip-hop',\n",
+       " 'russian language',\n",
+       " 'russian pop',\n",
+       " 'russian rap',\n",
+       " 'russian reggae',\n",
+       " 'sacremento',\n",
+       " 'sad',\n",
+       " 'sad music',\n",
+       " 'sadcore',\n",
+       " 'screamo',\n",
+       " 'sexy',\n",
+       " 'shoegaze',\n",
+       " 'should i go to a live concert',\n",
+       " 'singer-songwriter',\n",
+       " 'ska',\n",
+       " 'ska punk',\n",
+       " 'ska-punk',\n",
+       " 'slidan',\n",
+       " 'smell of female',\n",
+       " 'sng-star',\n",
+       " 'soft rock',\n",
+       " 'songs sarah likes',\n",
+       " 'sophisti-pop',\n",
+       " 'soul',\n",
+       " 'soviet',\n",
+       " 'spanish',\n",
+       " 'spoken word',\n",
+       " 'spotify',\n",
+       " 'stockton',\n",
+       " 'surf',\n",
+       " 'synth funk',\n",
+       " 'synth pop',\n",
+       " 'synth-pop',\n",
+       " 'synth-punk',\n",
+       " 'synthpop',\n",
+       " 'tayanna',\n",
+       " 'techno',\n",
+       " 'the ukrainians',\n",
+       " 'thrash metal',\n",
+       " 'tik',\n",
+       " 'torturecore',\n",
+       " 'trap',\n",
+       " 'trip-hop',\n",
+       " 'true story',\n",
+       " 'turbofolk',\n",
+       " 'tv-starua',\n",
+       " 'ua',\n",
+       " 'ufa',\n",
+       " 'uk garage',\n",
+       " 'ukr',\n",
+       " 'ukraina',\n",
+       " 'ukraine',\n",
+       " 'ukrainian',\n",
+       " 'ukrainian alternative',\n",
+       " 'ukrainian ethno',\n",
+       " 'ukrainian experimental',\n",
+       " 'ukrainian female',\n",
+       " 'ukrainian female vocalists',\n",
+       " 'ukrainian indie',\n",
+       " 'ukrainian male vocalists',\n",
+       " 'ukrainian pop',\n",
+       " 'ukrainian post-punk',\n",
+       " 'ukrainian punk',\n",
+       " 'ukrainian rap',\n",
+       " 'ukrainian rock',\n",
+       " 'ukrainian-folk',\n",
+       " 'ukrainske',\n",
+       " 'ukranian',\n",
+       " 'ukranian text',\n",
+       " 'underground hip hop',\n",
+       " 'upcoming album 2023',\n",
+       " 'urban soul',\n",
+       " 'vidbir',\n",
+       " 'vidbir 2019',\n",
+       " 'vidbir 2024 long-list',\n",
+       " 'vocalist',\n",
+       " 'voice of the country',\n",
+       " 'vopli vidoplyasova',\n",
+       " 'war',\n",
+       " 'war songs',\n",
+       " 'wave',\n",
+       " 'winter in the summertime',\n",
+       " 'witch house',\n",
+       " 'world',\n",
+       " 'world music',\n",
+       " 'x-factor',\n",
+       " 'xfactor',\n",
+       " 'yandex music',\n",
+       " 'zalupa',\n",
+       " 'zaporizhzhia'}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unique_artist_tags"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "artists_df.to_csv(os.path.join(\"data\", \"artists_v1.csv\"), index=False)"
    ]
   }
  ],
